# tftp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-multiarch.yml  rust.yml
src/: cli.rs  client.rs  main.rs  server.rs
src/tftp/: error.rs  mod.rs  options.rs  packet.rs  utils.rs
src/tftp/packet/: builder.rs  mod.rs
