[package]
name = "tftp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = [ "full" ] }
tokio-util = "0.7"
log = "0.4"
simple_logger = "4.2"
clap = { version = "4.3", features = [ "cargo", "derive" ] }
ctrlc = "3.4"
shellexpand = "3.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
