[package]
name = "tftp"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client","server"]
client = []
server = []

[dependencies]
tokio = { version = "1.43", features = [ "full" ] }
tokio-util = "0.7"
log = "0.4"
simple_logger = "5.0"
clap = { version = "4.5", features = [ "cargo", "derive" ] }
ctrlc = "3.4"
shellexpand = "3.1"
thiserror = "2.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
